--- a/calzone.html
+++ b/calzone.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Pizza</title>
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
     <h1>Calzone</h1>
-    <img src="/home/casey/Desktop/Repositories/Cookbook/img/calzone.jpg" alt="tasty calzone">
+    <img class="foodPic" src="/home/casey/Desktop/Repositories/Cookbook/img/calzone.jpg" alt="tasty calzone">
         <h2>Ingredients</h2>
             <ul>
                 <li>1 pound pizza dough</li>
