--- a/chickenparm.html
+++ b/chickenparm.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Chicken Parmesan</title>
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
     <h1>Chicken Parmesan</h1>
-    <img src="/home/casey/Desktop/Repositories/Cookbook/img/chickenparm.jpg" alt="steamy chicken parm">
+    <img class="foodPic" src="/home/casey/Desktop/Repositories/Cookbook/img/chickenparm.jpg" alt="steamy chicken parm">
         <h2>Ingredients</h2>
             <h3>Marinara Sauce</h3>
                 <ul>
