--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Cook Book</title>
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
     <h1>Italian Cook Book</h1>
