--- a/pizza.html
+++ b/pizza.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Pizza</title>
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
     <h1>Pizza</h1>
-    <img src="/home/casey/Desktop/Repositories/Cookbook/img/pizza.jpg" alt="pizza hot and ready">
+    <img class="foodPic" src="/home/casey/Desktop/Repositories/Cookbook/img/pizza.jpg" alt="pizza hot and ready">
         <h2>Ingredients</h2>
             <h3>For the dough</h3>
                 <ul>
